sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1: error: Unit does not take parameters
		cocktailSort();
                            ^AlgCocktailSort1:3: error: not found: value len
  for (i<- len-2 to 0) {
           ^